<resources>
    <string name="app_name">SixMDK</string>
    <string name="welcome">Добро пожаловать,</string>
    <string name="registration">Регистрация</string>
    <string name="name">Введите имя</string>
    <string name="surname">Введите фамилию</string>
    <string name="number">Введите номер</string>
    <string name="route">Маршрут</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="buy_taxi">Заказать такси</string>
    <string name="comfort">Комфорт</string>
    <string name="kids">Kids</string>
    <string name="delivery">Delivery</string>
    <string name="order">Заказать</string>
    <string name="call_taxi">Изменить данные</string>
    <string name="car">Класс:</string>
    <string name="end">Конец:</string>
    <string name="start">Начало:</string>
    <string name="choose">Выбрать</string>
    <string name="econom">Эконом</string>
</resources>