<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentations.welcome.view.WelcomeFragment"
    android:background="#131014"
    tools:ignore="MissingConstraints">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgrounds"
        android:scaleType="centerCrop"
        android:alpha="0.05"/>
    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="Добро пожаловать, Имя фамилия"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginHorizontal="@dimen/_84dp"/>
    
    <ImageView
        android:id="@+id/pink_taxi_icon"
        android:layout_width="@dimen/_220dp"
        android:layout_height="@dimen/_171dp"
        android:src="@drawable/pink_taxi_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        android:layout_marginTop="@dimen/_41dp"/>

    <TextView
        android:gravity="start|center"
        android:id="@+id/start_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:hint="@string/start"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pink_taxi_icon"
        android:layout_marginTop="@dimen/_41dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>
    <View
        android:layout_width="@dimen/_0dp"
        android:layout_height="2dp"
        android:background="#FC0FC0"
        app:layout_constraintStart_toStartOf="@id/start_input"
        app:layout_constraintEnd_toEndOf="@id/start_input"
        app:layout_constraintTop_toBottomOf="@id/start_input" />

    <TextView
        android:gravity="start|center"
        android:id="@+id/end_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:hint="@string/end"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_input"
        android:layout_marginTop="@dimen/_27dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>
    <View
        android:layout_width="@dimen/_0dp"
        android:layout_height="2dp"
        android:background="#FC0FC0"
        app:layout_constraintStart_toStartOf="@id/end_input"
        app:layout_constraintEnd_toEndOf="@id/end_input"
        app:layout_constraintTop_toBottomOf="@id/end_input" />

    <TextView
        android:gravity="start|center"
        android:id="@+id/car_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:hint="@string/car"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_input"
        android:layout_marginTop="@dimen/_27dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>
    <View
        android:layout_width="@dimen/_0dp"
        android:layout_height="2dp"
        android:background="#FC0FC0"
        app:layout_constraintStart_toStartOf="@id/car_input"
        app:layout_constraintEnd_toEndOf="@id/car_input"
        app:layout_constraintTop_toBottomOf="@id/car_input" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_taxi_btn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_45dp"
        android:background="@drawable/choose_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_input"
        android:layout_marginTop="@dimen/_37dp"
        android:layout_marginHorizontal="@dimen/_85dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_taxi"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>