<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentations.registration.view.RegistrationFragment"
    tools:ignore="MissingConstraints"
    android:background="#131014">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgrounds"
        android:scaleType="centerCrop"
        android:alpha="0.05"/>
    <ImageView
        android:id="@+id/welcome_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_302dp"
        android:src="@drawable/pink_taxi_icon"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_70dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_62dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_38dp"
        android:background="@drawable/edit_text_registration_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_icon"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surname_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_62dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        android:hint="@string/surname"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_38dp"
        android:background="@drawable/edit_text_registration_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        android:layout_marginTop="@dimen/_55dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number_input"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_62dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        android:hint="@string/number"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_38dp"
        android:background="@drawable/edit_text_registration_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_input"
        android:layout_marginTop="@dimen/_55dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginStart="@dimen/_25dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_btn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_60dp"
        app:layout_constraintTop_toBottomOf="@id/number_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_15dp"
        android:layout_marginTop="@dimen/_55dp"
        android:background="@drawable/basic_button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Войти"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>