<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentations.main.view.OrderTaxiFragment"
    tools:ignore="MissingConstraints">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/welcome_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_elite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_15dp"/>



            <ImageView
                android:id="@+id/from_route_point"
                android:layout_width="@dimen/_14dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/marker"
                app:layout_constraintTop_toBottomOf="@id/welcome_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_32dp"
                android:layout_marginStart="@dimen/_40dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/from_route_input"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:hint="@string/from"
                android:textColorHint="@color/white"
                android:paddingStart="@dimen/_15dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="@id/from_route_point"
                app:layout_constraintBottom_toBottomOf="@id/from_route_point"
                app:layout_constraintStart_toEndOf="@id/from_route_point"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_40dp"/>
            <View
                android:layout_width="@dimen/_0dp"
                android:layout_height="2dp"
                android:background="@drawable/line_background"
                app:layout_constraintStart_toStartOf="@id/from_route_point"
                app:layout_constraintEnd_toEndOf="@id/from_route_input"
                app:layout_constraintTop_toBottomOf="@id/from_route_input"
                android:layout_marginTop="@dimen/_4dp"/>


            <ImageView
                android:id="@+id/to_route_point"
                android:layout_width="@dimen/_14dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/marker"
                app:layout_constraintTop_toBottomOf="@id/from_route_point"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginStart="@dimen/_40dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/to_route_input"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:textColorHint="@color/white"
                android:hint="@string/to"
                android:paddingStart="@dimen/_15dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="@id/to_route_point"
                app:layout_constraintBottom_toBottomOf="@id/to_route_point"
                app:layout_constraintStart_toEndOf="@id/to_route_point"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_40dp"/>
            <View
                android:layout_width="@dimen/_0dp"
                android:layout_height="2dp"
                android:background="@drawable/line_background"
                app:layout_constraintStart_toStartOf="@id/to_route_point"
                app:layout_constraintEnd_toEndOf="@id/to_route_input"
                app:layout_constraintTop_toBottomOf="@id/to_route_input"
                android:layout_marginTop="@dimen/_4dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/infinity"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_200dp"
                android:background="@drawable/car_card_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mercedes"
                app:layout_constraintTop_toBottomOf="@id/to_route_point"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginStart="@dimen/_35dp"
                android:layout_marginEnd="@dimen/_5dp">
                <ImageView
                    android:id="@+id/infinity_icon"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_120dp"
                    android:src="@drawable/infinity"
                    android:scaleType="centerCrop"
                    android:background="@drawable/car_rounded"
                    android:clipToOutline="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_12dp"/>
                <TextView
                    android:id="@+id/infinity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Infiniti fx 37s"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/infinity_icon"
                    app:layout_constraintStart_toStartOf="@id/infinity_icon"
                    android:layout_marginTop="@dimen/_5dp"/>

                <TextView
                    android:id="@+id/infinity_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1228 р"
                    android:textColor="#A68AFA"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/infinity_name"
                    app:layout_constraintStart_toStartOf="@id/infinity_icon"
                    android:layout_marginTop="@dimen/_5dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mercedes"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_200dp"
                android:background="@drawable/car_card_background"
                app:layout_constraintStart_toEndOf="@id/infinity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_route_point"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_35dp"
                android:layout_marginStart="@dimen/_5dp">
                <ImageView
                    android:id="@+id/mercedes_icon"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_120dp"
                    android:src="@drawable/mercedes"
                    android:scaleType="centerCrop"
                    android:background="@drawable/car_rounded"
                    android:clipToOutline="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_12dp"/>
                <TextView
                    android:id="@+id/mercedes_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mercedes GLE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/mercedes_icon"
                    app:layout_constraintStart_toStartOf="@id/mercedes_icon"
                    android:layout_marginTop="@dimen/_5dp"/>

                <TextView
                    android:id="@+id/mercedes_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1870 р"
                    android:textColor="#A68AFA"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/mercedes_name"
                    app:layout_constraintStart_toStartOf="@id/mercedes_icon"
                    android:layout_marginTop="@dimen/_5dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bmw"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_200dp"
                android:background="@drawable/car_card_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/audi"
                app:layout_constraintTop_toBottomOf="@id/infinity"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginStart="@dimen/_35dp"
                android:layout_marginEnd="@dimen/_5dp">
                <ImageView
                    android:id="@+id/bmw_icon"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_120dp"
                    android:src="@drawable/bmw"
                    android:scaleType="centerCrop"
                    android:background="@drawable/car_rounded"
                    android:clipToOutline="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_12dp"/>
                <TextView
                    android:id="@+id/bmw_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BMW 840i"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/bmw_icon"
                    app:layout_constraintStart_toStartOf="@id/bmw_icon"
                    android:layout_marginTop="@dimen/_5dp"/>

                <TextView
                    android:id="@+id/bmw_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2350 р"
                    android:textColor="#A68AFA"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/bmw_name"
                    app:layout_constraintStart_toStartOf="@id/bmw_icon"
                    android:layout_marginTop="@dimen/_5dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audi"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_200dp"
                android:background="@drawable/car_card_background"
                app:layout_constraintStart_toEndOf="@id/bmw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mercedes"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_35dp"
                android:layout_marginStart="@dimen/_5dp">
                <ImageView
                    android:id="@+id/audi_icon"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_120dp"
                    android:src="@drawable/audi_r8"
                    android:scaleType="centerCrop"
                    android:background="@drawable/car_rounded"
                    android:clipToOutline="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_12dp"/>
                <TextView
                    android:id="@+id/audi_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Audi R8"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/audi_icon"
                    app:layout_constraintStart_toStartOf="@id/audi_icon"
                    android:layout_marginTop="@dimen/_5dp"/>

                <TextView
                    android:id="@+id/audi_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2100 р"
                    android:textColor="#A68AFA"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/audi_name"
                    app:layout_constraintStart_toStartOf="@id/audi_icon"
                    android:layout_marginTop="@dimen/_5dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/choose_btn"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_45dp"
                android:background="@drawable/choose_background"
                app:layout_constraintTop_toBottomOf="@id/bmw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_55dp"
                android:layout_marginHorizontal="@dimen/_95dp"
                android:layout_marginTop="@dimen/_32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>